syntax = "proto3";

package com.halfacode.appointment;

option java_multiple_files = true;

service AppointmentService {
  rpc BookAppointment (BookAppointmentRequest) returns (BookAppointmentResponse); //unary rpc
  rpc GetAppointmentAvailability (AppointmentAvailabilityRequest) returns (stream AppointmentAvailabilityResponse); //server streaming rpc
}

message BookAppointmentRequest {
  int64 doctor_id = 1;
  int64 patient_id = 2;
  string appointment_date = 3;
  string appointment_time = 4;
  string reason = 5;
}

message BookAppointmentResponse {
  int64 appointment_id = 1;
  string message = 2;
}

message AppointmentAvailabilityRequest {
  int64 doctor_id = 1;
}

message AppointmentSlot {
  string appointment_date = 1;
  string appointment_time = 2;
  bool is_available = 3;
}

message AppointmentAvailabilityResponse {
  string availability_as_of = 1;
  repeated AppointmentSlot responses = 2;
}