syntax = "proto3";

option java_multiple_files = true;

package com.halfacode.doctor;


service DoctorService {
  rpc RegisterDoctor (DoctorRegistrationRequest) returns (DoctorRegistrationResponse);
  rpc GetDoctorDetails (DoctorDetailsRequest) returns (DoctorDetailsResponse);
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string message = 3;
  string from = 1;
  string to = 2;
  string timestamp = 4;
}

message DoctorRegistrationRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string specialty = 5;
  string centre_name = 6;
  string location = 7;
}

message DoctorRegistrationResponse {
  int64 doctor_id = 1;
  string message = 2;
}

message DoctorDetailsRequest {
  int64 doctor_id = 1;
}

message DoctorDetailsResponse {
  int64 doctor_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string specialty = 6;
  string centre_name = 7;
  string location = 8;
}